# open-webui-auth-proxy

./: .env-example  .gitignore  Dockerfile  README.md  compose.yaml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
app/: main.py
tests/: helloworld.json  test-app.py
