[project]
name = "open-webui-auth-proxy"
version = "0.1.0"
description = "My lovely open-webui-proxy"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]",
    "httpx>=0.28.1",
]
[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "respx",
    "coverage"
]
